DATA STRUCTURES.ipynb

--- a/DATA STRUCTURES.ipynb
+++ b/DATA STRUCTURES.ipynb
@@ -29,7 +29,7 @@
    "id": "7816fffb",
    "metadata": {},
    "source": [
-    "Python determina automaticamente il tipo di una variabile in base al valore assegnato, a differenza di altri linguaggi in cui è necessario dichiarare il tipo in anticipo. Inoltre, Python è un linguaggio interpretato, quindi i comandi vengono eseguiti sequenzialmente senza bisogno di compilazione preventiva."
+    "Python determina automaticamente il tipo di una variabile in base al valore assegnato, a differenza di altri linguaggi in cui è necessario dichiarare il tipo in anticipo. Inoltre, Python è un linguaggio interpretato, quindi i comandi vengono eseguiti senza bisogno di compilazione preventiva."
    ]
   },
   {
