DATA STRUCTURES.ipynb

--- a/DATA STRUCTURES.ipynb
+++ b/DATA STRUCTURES.ipynb
@@ -86,7 +86,7 @@
    "id": "4082a2b4-59df-445a-b9a9-a3be93c39d4e",
    "metadata": {},
    "source": [
-    "Le sequenze in Python sono collezioni ordinate di elementi. Ogni elemento in una sequenza ha un indice che indica la sua posizione nella sequenza. Le sequenze possono essere indicizzate e sezionate per accedere agli elementi individuali o a sottoinsiemi di elementi.\n",
+    "Le sequenze in Python sono collezioni ordinate di elementi. Ogni elemento in una sequenza ha un indice che indica la sua posizione nella sequenza. Le sequenze possono essere indicati e sezionate per accedere agli elementi individuali o a sottoinsiemi di elementi.\n",
     "\n",
     "Le sequenze principali in Python includono:\n",
     "Stringhe: Sequenze immutabili di caratteri, definite tra virgolette singole o doppie.\n",
