DATA STRUCTURES.ipynb

--- a/DATA STRUCTURES.ipynb
+++ b/DATA STRUCTURES.ipynb
@@ -107,7 +107,7 @@
    "id": "e6473dbe-cdb4-4527-ad1b-5ae4f44133d7",
    "metadata": {},
    "source": [
-    "Una stringa è una sequenza di caratteri, immutabile, che possono includere lettere, numeri, simboli e spazi, trattati come un singolo oggetto di dati all'interno di un programma. Sul questo codice definiamo la stringa che si stampa \"Ciao, Mondo!\". Definiamo la lunghezza e dopo otenniamo la sottostringa. Concateniamo le due stringhe."
+    "Una stringa è una sequenza di caratteri, immutabile, che possono includere lettere, numeri, simboli e spazi, trattati come un singolo oggetto di dati all'interno di un programma. Sul questo codice definiamo la stringa che si stampa \"Hello, World!\". Definiamo la lunghezza e dopo otenniamo la sottostringa. Concateniamo le due stringhe."
    ]
   },
   {
@@ -120,15 +120,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ciao, Mondo!\n",
+      "Hello, World!\n",
       "Lunghezza della stringa: 12\n",
       "Sottostringa: Ciao,\n",
-      "Nuova stringa: Ciao, Mondo! Come stai?\n"
+      "Nuova stringa: Hello, World! Come stai?\n"
      ]
     }
    ],
    "source": [
-    "stringa = \"Ciao, Mondo!\" # Definisce una stringa\n",
+    "stringa = \"Hello, World!\" # Definisce una stringa\n",
     "\n",
     "print(stringa) # Stampa la stringa\n",
     "\n",
